--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d6e535d71c7221fd0992cc9d359315dc"
+    ></script>
     <title>프로필</title>
   </head>
   <body>
