--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d6e535d71c7221fd0992cc9d359315dc"
-    ></script>
-    <title>프로필</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
+        <script
+            type="text/javascript"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d6e535d71c7221fd0992cc9d359315dc"
+        ></script>
+        <script src="https://t1.kakaocdn.net/kakao_js_sdk/v1/kakao.js"></script>
+        <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js"></script>
+        <title>프로필</title>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
